[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://tool/Leaderboard/Cleaner.gd" type="Script" id=2]

[sub_resource type="ButtonGroup" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1904.0
margin_bottom = 1064.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1876.0
margin_bottom = 1036.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_right = 1864.0
margin_bottom = 57.0

[node name="ButtonUpdate" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 107.0
margin_bottom = 57.0
focus_mode = 0
text = "update"

[node name="ButtonPrestige" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 241.0
margin_bottom = 57.0
focus_mode = 0
toggle_mode = true
group = SubResource( 1 )
text = "prestige"

[node name="ButtonPrestige2" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 257.0
margin_right = 354.0
margin_bottom = 57.0
focus_mode = 0
toggle_mode = true
group = SubResource( 1 )
text = "cobalt"

[node name="ButtonPrestige3" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 370.0
margin_right = 520.0
margin_bottom = 57.0
focus_mode = 0
toggle_mode = true
group = SubResource( 1 )
text = "countdown"

[node name="ButtonPrestige4" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 536.0
margin_right = 626.0
margin_bottom = 57.0
focus_mode = 0
toggle_mode = true
group = SubResource( 1 )
text = "miner"

[node name="ButtonPrestige5" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 760.0
margin_bottom = 57.0
toggle_mode = true
group = SubResource( 1 )
text = "cheated"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 1248.0
margin_right = 1392.0
margin_bottom = 57.0
size_flags_horizontal = 6

[node name="ButtonBack" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 57.0
focus_mode = 0
text = "<<"

[node name="LabelPage" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_top = 16.0
margin_right = 72.0
margin_bottom = 41.0

[node name="ButtonForward" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 144.0
margin_bottom = 57.0
focus_mode = 0
text = ">>"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 1864.0
margin_bottom = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 32.0
margin_bottom = 32.0

[node name="GlobalLeaderboardContainer" type="GridContainer" parent="MarginContainer/PanelContainer/VBoxContainer/ScrollContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 5
custom_constants/hseparation = 40
columns = 10

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/ButtonUpdate" to="." method="_on_ButtonUpdate_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/ButtonPrestige" to="." method="_on_ButtonPrestige_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/ButtonPrestige2" to="." method="_on_ButtonPrestige2_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/ButtonPrestige3" to="." method="_on_ButtonPrestige3_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/ButtonPrestige4" to="." method="_on_ButtonPrestige4_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/ButtonPrestige5" to="." method="_on_ButtonPrestige5_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/ButtonForward" to="." method="_on_ButtonForward_pressed"]
